# MedScrapping

./: .gitignore  Makefile  README.md  pyproject.toml
scrapper/: cli.py  scrap_urls.py
text_files/: extracted_text_page_1.txt  extracted_text_page_2.txt
