[tool.poetry]
name = "medscrappingproject"
version = "0.1.0"
description = "Tool to scrap .txt data from MedDB website"
authors = ["Nikita <voitko1994@gmail.com>"]
readme = "README.md"
packages = [
  { include = "scrapper" },
]


[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
bs4 = "^0.0.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
scrap = "scrapper.cli:main"
